<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtName"
        style="@style/viewCustom"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtLastName"
        style="@style/viewCustom"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        style="@style/viewCustom"
    android:onClick="register"
    android:background="@color/colorAccent"
    android:text="@string/createAct"
    android:textColor="@android:color/white"
    android:textStyle="bold" />
</LinearLayout>
