<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#455A64"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create"
        style="@style/viewCustom"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="register"
        android:text="@string/createAct"
        android:textColor="#455A64"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:onClick="forgotPassword"
        android:text="@string/forgotPassword"
        android:textSize="20sp" />
</LinearLayout>
